"Poro" theme improvements. Now includes three different button styles :)
svn changeset:7638 branch:theme_2009_03

--- a/WebContent/ITMILL/themes/base/common/common.css
+++ b/WebContent/ITMILL/themes/base/common/common.css
@@ -52,11 +52,7 @@
 .i-window select {
 	margin: 0;
 }
-.i-disabled
-/*,
-.i-app .i-disabled,
-.i-window .i-disabled,
-.i-popupview-popup .i-disabled*/ {
+.i-disabled {
 	opacity: .3;
 	filter: alpha(opacity=30);
 	cursor: default;
