--- a/WebContent/ITMILL/themes/reindeer/button/button.css
+++ b/WebContent/ITMILL/themes/reindeer/button/button.css
@@ -1,36 +1,36 @@
-/** sprite: buttons; sprite-image: url('img/buttons.png'); sprite-layout: vertical */
+/** sprite: buttons; sprite-image: url(img/buttons.png); sprite-layout: vertical */
 
-/* IE6 gets native buttons, since it doesn't support the adjacent child selector (>) that is needed to position i-icon properly */
+/* We serve simpler buttons for IE6, since it doesn't support the adjacent 
+ * sibling selector (+) that is needed to position .i-icon properly.
+ */
 div > .i-button,
-.i-ie7 .i-button,
-.i-ie8 .i-button {
+.i-ie7 .i-button {
 	height: 26px;
 	padding: 0 0 0 6px;
 	background-color: transparent;
-	background-repeat: none;
+	background-repeat: no-repeat;
 	background-image: url(img/left.png); /** sprite-ref: buttons */
 	border: none;
 	cursor: default;
 }
 div > .i-button span,
-.i-ie7 .i-button span,
-.i-ie8 .i-button span {
+.i-ie7 .i-button span {
 	display: inline-block;
-	height: 21px;
-	padding: 5px 15px 0 9px;
+	height: 22px;
+	padding: 4px 15px 0 9px;
 	background-color: transparent;
 	background-repeat: no-repeat;
 	background-position: right top;
 	background-image: url(img/right.png);  /** sprite-ref: buttons; sprite-alignment: right */
 	text-shadow: #fff 0 1px 0;
 	font-weight: bold;
-	float: none;
+	font-size: 11px;
 	line-height: 16px;
+	float: none;
 }
-.i-ie7 .i-button span,
-.i-ie8 .i-button span {
-	padding: 5px 15px 0 9px;
+.i-sa .i-button span {
 	height: 21px;
+	padding-top: 5px;
 }
 .i-button:focus {
 	background-image: url(img/left-focus.png); /** sprite-ref: buttons */
@@ -40,13 +40,18 @@ div > .i-button span,
 	background-image: url(img/right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
 }
-.i-button:active {
+.i-button:active,
+.i-ie7 .i-button.i-pressed {
 	background-image: url(img/left-pressed.png); /** sprite-ref: buttons */
 	outline: none;
 }
-.i-button:active span {
+.i-button:active span,
+.i-ie7 .i-button.i-pressed span {
 	background-image: url(img/right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
+}
+.i-ie7 .i-button.i-pressed span {
+	position: relative;
 }
 /* FF3 & FF2 */
 .i-button::-moz-focus-inner {
@@ -57,29 +62,10 @@ div > .i-button span,
 	display: -moz-inline-box;
 }
 /* IE7 */
-.i-ie7 .i-button.i-pressed,
-.i-ie8 .i-button.i-pressed {
-	background-image: url(img/left-pressed.png); /** sprite-ref: buttons */
-}
-.i-ie7 .i-button.i-pressed span,
-.i-ie8 .i-button.i-pressed span {
-	background-image: url(img/right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
-	position: relative;
-}
-.i-ie7 .i-button.i-pressed .i-icon,
-.i-ie8 .i-button.i-pressed .i-icon {
+.i-ie7 .i-button.i-pressed .i-icon {
 	position: relative;
 	z-index: 2;
 }
-/* IE8 */
-/* TODO
-.i-ie8 .i-button:active {
-	background-position: 1px -39px;
-}
-.i-ie8 .i-button:active span {
-	position: relative;
-}
-*/
 /* Opera */
 .i-op .i-button:active span {
 	margin-top: -1px;
@@ -87,8 +73,7 @@ div > .i-button span,
 }
 /* Modifications for buttons with icons */
 div > .i-button .i-icon,
-.i-ie7 .i-button .i-icon,
-.i-ie8 .i-button .i-icon {
+.i-ie7 .i-button .i-icon {
 	display: inline-block;
 	width: 16px;
 	height: 16px;
@@ -104,25 +89,44 @@ div > .i-button .i-icon,
 .i-ff2 .i-button-link .i-icon {
 	margin: 0;
 }
-.i-button .i-icon + span {
+.i-button .i-icon + span,
+.i-button .i-icon + .i-errorindicator + span {
 	margin-left: -19px;
 	padding-left: 19px;
 }
 .i-ie7 .i-button .i-icon + span,
-.i-ie8 .i-button .i-icon + span {
+.i-ie7 .i-button .i-icon + .i-errorindicator + span {
 	margin-left: -23px;
 	padding-left: 23px;
 }
+/* Buttons with error indicator */
+div > .i-button .i-errorindicator,
+.i-ie7 .i-button .i-errorindicator {
+	display: inline;
+	position: absolute;
+	width: 5px;
+	height: 26px;
+	background: transparent url(../../default/icons/16/error.png) no-repeat 50%;
+	overflow: hidden;
+}
+.i-ie6 .i-button .i-errorindicator {
+	position: absolute;
+	width: 5px;
+	height: 18px;
+	background: transparent url(../../default/icons/16/error.gif) no-repeat 50%;
+	overflow: hidden;
+	margin-left: -10px;
+}
 /* Link style buttons */
 .i-button.i-button-link,
-.i-ie .i-button-link.i-pressed {
+.i-ie7 .i-button-link.i-pressed {
 	background: transparent;
 	height: auto;
 	padding: 0;
 	cursor: pointer;
 }
 .i-button.i-button-link span,
-.i-ie .i-button-link.i-pressed span {
+.i-ie7 .i-button-link.i-pressed span {
 	background: transparent;
 	height: auto;
 	padding: 0;
@@ -136,4 +140,90 @@ div > .i-button .i-icon,
 }
 .i-button-link:focus {
 	outline: 1px dotted #1b699f;
+}
+/**
+ * Default action button style --------------------------
+ */
+div > .i-button-primary,
+.i-ie7 .i-button-primary {
+	background-image: url(img/primary-left.png); /** sprite-ref: buttons */
+}
+div > .i-button-primary span,
+.i-ie7 .i-button-primary span {
+	background-image: url(img/primary-right.png); /** sprite-ref: buttons; sprite-alignment: right */
+}
+.i-button-primary:focus {
+	background-image: url(img/primary-left-focus.png); /** sprite-ref: buttons */
+}
+.i-button-primary:focus span {
+	background-image: url(img/primary-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
+}
+.i-button-primary:active,
+.i-ie7 .i-button-primary.i-pressed {
+	background-image: url(img/primary-left-pressed.png); /** sprite-ref: buttons */
+}
+.i-button-primary:active span,
+.i-ie7 .i-button-primary.i-pressed span {
+	background-image: url(img/primary-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
+}
+/* 
+ * Small-style --------------------------
+ */
+div > .i-button-small,
+.i-ie7 .i-button-small {
+	background-image: url(img/small-left.png); /** sprite-ref: buttons */
+	height: 20px;
+}
+div > .i-button-small span,
+.i-ie7 .i-button-small span {
+	background-image: url(img/small-right.png); /** sprite-ref: buttons; sprite-alignment: right */
+	height: 19px;
+	padding: 1px 11px 0 5px;
+	font-weight: normal;
+}
+.i-sa .i-button-small span {
+	height: 18px;
+	padding-top: 2px;
+}
+.i-button-small:focus {
+	background-image: url(img/small-left-focus.png); /** sprite-ref: buttons */
+}
+.i-button-small:focus span {
+	background-image: url(img/small-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
+}
+.i-button-small:active,
+.i-ie7 .i-button-small.i-pressed {
+	background-image: url(img/small-left-pressed.png); /** sprite-ref: buttons */
+}
+.i-button-small:active span,
+.i-ie7 .i-button-small.i-pressed span {
+	background-image: url(img/small-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
+}
+
+/**
+ * IE6 buttons --------------------------
+ */
+.i-ie6 .i-button {
+	border: 1px solid #b3b3b3;
+	border-bottom-color: #9a9a9a;
+	background: transparent url(img/right.png) no-repeat 0 -1px;
+	padding: 3px 15px 2px 15px;
+	font-weight: bold;
+	font-size: 11px;
+	line-height: 16px;
+	height: 16px;
+	outline: none;
+}
+.i-ie6 .i-button-primary {
+	background-image: url(img/primary-right.png);
+}
+.i-ie6 .i-button-small {
+	font-weight: normal;
+	padding: 1px 11px 0 11px;
+	height: 12px;
+	line-height: normal;
+	background-image: url(img/small-right.png);
+}
+.i-ie6 .i-button.i-pressed {
+	background: transparent url(img/right-pressed.png) no-repeat 0 -1px;
 }
