--- a/WebContent/ITMILL/themes/reindeer/layouts/layouts.css
+++ b/WebContent/ITMILL/themes/reindeer/layouts/layouts.css
@@ -24,3 +24,9 @@
 	padding-top: 7px;
 	padding-left: 6px;
 }
+/* Blue background */
+.i-verticallayout-blue,
+.i-horizontallayout-blue,
+.i-orderedlayout-blue {
+	background-color: #bcd3de;
+}
